tests/errors/test_11.x
// If conditional is not boolean

fn main() -> i64 {

    if 1 {
        outInt(1);
    }

    if 'c' {
      outInt(1);
    }

}